--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "packageManager": "pnpm@9.8.0",
   "description": "Wechaty Puppet for WechatFerry",
-  "author": "keJun <sanhua@himrr.com>",
+  "author": "mrrhq <sanhua@himrr.com>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/mrrhq",
   "homepage": "https://github.com/mrrhq/wechaty-puppet-ferry#readme",
