--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,10 +26,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-      # Uncomment the following lines to publish to npm on CI
-
       - run: pnpm install
-      - run: pnpm publish -r --access public
+      - run: pnpm publish --access public --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
           NPM_CONFIG_PROVENANCE: true
