chore: clear log

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "dev": "unbuild --stub",
     "lint": "eslint .",
     "prepublishOnly": "nr build",
-    "release": "bumpp && npm publish",
+    "release": "bumpp",
     "start": "esno src/index.ts",
     "play": "npm -C playground start",
     "test": "vitest",
