--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wechaty-puppet-ferry",
+  "name": "wechaty-puppet-wcferry",
   "type": "module",
   "version": "0.0.1",
   "packageManager": "pnpm@9.8.0",
@@ -55,13 +55,9 @@
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
+    "@wcferry/core": "github:kejunmao/node-wcferry#build&path:packages/core",
     "file-box": "^1.4.15",
-    "fs-extra": "^11.2.0",
-    "h3": "^1.12.0",
-    "hookable": "^5.5.3",
     "knex": "^3.1.0",
-    "listhen": "^1.7.2",
-    "ofetch": "^1.3.4",
     "protobufjs": "^7.4.0",
     "unstorage": "^1.10.2",
     "wechaty-puppet": "^1.20.2",
@@ -71,7 +67,6 @@
     "@antfu/eslint-config": "^2.27.1",
     "@antfu/ni": "^0.22.4",
     "@antfu/utils": "^0.7.10",
-    "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.5.0",
     "@types/xml2js": "^0.4.14",
     "bumpp": "^9.5.2",
