--- a/playground/package.json
+++ b/playground/package.json
@@ -12,6 +12,6 @@
   },
   "dependencies": {
     "wechaty": "^1.20.2",
-    "wechaty-puppet-ferry": "workspace:*"
+    "wechaty-puppet-wcferry": "workspace:*"
   }
 }
