--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@wcferry/core": "github:kejunmao/node-wcferry#build&path:packages/core",
     "file-box": "^1.4.15",
     "knex": "^3.1.0",
+    "mlly": "^1.7.1",
     "protobufjs": "^7.4.0",
     "unstorage": "^1.10.2",
     "wechaty-puppet": "^1.20.2",
