chore: update cSpell words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,7 +48,14 @@
     "cdnvideourl",
     "filehelper",
     "listhen",
+    "openim",
+    "qmessage",
+    "Quan",
+    "removee",
+    "roomid",
     "slik",
+    "thumburl",
+    "tmessage",
     "totallen",
     "videomsg",
     "voicemsg"
